baskets thumbnail added - V 0.4

--- a/front/fluttercode/pubspec.yaml
+++ b/front/fluttercode/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^3.1.0
   flutter_credit_card: ^4.1.0
   mask_text_input_formatter: ^2.9.0
+  cached_network_image: ^3.4.1
 
 
 
