Backend new functions - V 0.6

--- a/back/cmscode/api/profile/models/profile.settings.json
+++ b/back/cmscode/api/profile/models/profile.settings.json
@@ -37,6 +37,10 @@
     "father": {
       "model": "profile",
       "via": "dependents"
+    },
+    "baskets": {
+      "via": "profile",
+      "collection": "basket"
     }
   }
 }
