--- a/back/cmscode/api/basket/models/basket.settings.json
+++ b/back/cmscode/api/basket/models/basket.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "baskets",
   "info": {
-    "name": "Basket"
+    "name": "Basket",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -22,6 +23,14 @@
       "plugin": "upload",
       "required": false,
       "pluginOptions": {}
+    },
+    "profile": {
+      "model": "profile",
+      "via": "baskets"
+    },
+    "student": {
+      "model": "students",
+      "via": "baskets"
     }
   }
 }
