--- a/back/cmscode/api/students/models/students.settings.json
+++ b/back/cmscode/api/students/models/students.settings.json
@@ -26,6 +26,10 @@
     },
     "cpf": {
       "type": "string"
+    },
+    "baskets": {
+      "via": "student",
+      "collection": "basket"
     }
   }
 }
