--- a/front/fluttercode/ios/Runner/Info.plist
+++ b/front/fluttercode/ios/Runner/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Precisamos acessar sua câmera para tirar fotos dos comprovantes</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Precisamos acessar o microfone para gravar vídeos</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Precisamos da sua localização para mostrar a loja no mapa.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
