--- a/front/fluttercode/pubspec.yaml
+++ b/front/fluttercode/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   file_picker: ^8.1.7
   typed_data: ^1.3.2
-  html: ^0.15.4
+  html: ^0.15.6
   flutter_snake_navigationbar: ^0.6.1
   url_launcher: ^6.0.20
   path_provider: ^2.1.5
@@ -52,6 +52,10 @@ dependencies:
   image_picker: ^1.1.2
   universal_io: ^2.2.2
   provider: ^6.1.5
+  image_picker_web: ^3.0.1 # Para web
+  universal_html: ^2.2.4
+
+
 
 
 
