Image web camera added - V 0.8

--- a/back/cmscode/api/basket/models/basket.settings.json
+++ b/back/cmscode/api/basket/models/basket.settings.json
@@ -29,8 +29,8 @@
       "via": "baskets"
     },
     "student": {
-      "model": "students",
-      "via": "baskets"
+      "via": "baskets",
+      "model": "students"
     }
   }
 }
