--- a/back/cmscode/api/students/models/students.settings.json
+++ b/back/cmscode/api/students/models/students.settings.json
@@ -30,6 +30,15 @@
     "baskets": {
       "via": "student",
       "collection": "basket"
+    },
+    "mother": {
+      "type": "string"
+    },
+    "address": {
+      "type": "text"
+    },
+    "neighborhood": {
+      "type": "string"
     }
   }
 }
