--- a/back/cmscode/api/profile/models/profile.settings.json
+++ b/back/cmscode/api/profile/models/profile.settings.json
@@ -41,6 +41,18 @@
     "baskets": {
       "via": "profile",
       "collection": "basket"
+    },
+    "photo": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
