--- a/back/cmscode/api/students/models/students.settings.json
+++ b/back/cmscode/api/students/models/students.settings.json
@@ -39,6 +39,18 @@
     },
     "neighborhood": {
       "type": "string"
+    },
+    "photo": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
